# atlas-os

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml  release-atlas-os.yml  release.yml
apps/: README.md
apps/backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  package.json
apps/backend/migrations/: 20260224000000_init_api_keys.sql
apps/backend/src/: index.ts  main.rs  state.rs
apps/backend/src/clients/: alchemy.rs  cache.rs  coingecko.rs  mod.rs
apps/backend/src/lib/: db.ts  keygen.ts  migrate.ts  redis.ts
apps/backend/src/middleware/: apikey.ts  auth.ts  cors.ts  error.ts
apps/backend/src/routes/: coingecko.rs  health.rs  health.ts  keys.ts  markets.rs  mod.rs  modules.rs  morpho.rs  portfolio.rs  rpc.ts  zerox.rs
apps/backend/src/routes/atlas-os/: me.ts  rpc.ts
apps/backend/src/routes/atlas-os/0x/: _proxy.ts  index.ts
apps/backend/src/routes/atlas-os/0x/swap/: chains.ts  index.ts
apps/backend/src/routes/atlas-os/0x/swap/allowance-holder/: index.ts  price.ts  quote.ts
apps/backend/src/routes/atlas-os/0x/swap/permit2/: index.ts  price.ts  quote.ts
apps/backend/src/routes/atlas-os/compute/: index.ts  usage.ts
apps/backend/src/routes/atlas-os/market/dex/: _data.ts  index.ts  networks.ts  pools.ts  search.ts  tokens.ts  trending.ts
apps/backend/src/services/: coingecko.rs  mod.rs  portfolio.rs
apps/frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  components.json  package.json
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/app/dashboard/: page.tsx
apps/frontend/components/: compute-usage-chart.tsx
apps/frontend/components/ui/: alert-dialog.tsx
crates/cli/: Cargo.toml
crates/cli/src/: factory.rs  main.rs
crates/cli/src/commands/: account.rs  auth.rs  coingecko.rs  configure.rs  doctor.rs  evm.rs  export.rs  helpers.rs  history.rs  market.rs  mod.rs  modules.rs  morpho.rs  risk.rs  spot.rs  status.rs  stream.rs  sub.rs  ta.rs  trade.rs  vault.rs  zero_x.rs
crates/cli/src/tui/: app.rs  mod.rs  state.rs  ui.rs
crates/common/: Cargo.toml
crates/common/src/: constants.rs  error.rs  lib.rs  traits.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  backend.rs  config.rs  constants.rs  db.rs  engine.rs  error.rs  fmt.rs  lib.rs  orchestrator.rs  output.rs  parse.rs  prompt.rs  risk.rs  traits.rs  types.rs  workspace.rs
crates/modules/hl/: Cargo.toml
crates/modules/hl/src/: client.rs  convert.rs  lib.rs  signing.rs
crates/modules/hyperliquid/: Cargo.toml
crates/modules/hyperliquid/src/: client.rs  convert.rs
crates/modules/morpho/: Cargo.toml
crates/modules/morpho/src/: client.rs
crates/modules/zero-x/: Cargo.toml
crates/modules/zero-x/src/: client.rs
crates/modules/zero_x/: Cargo.toml
crates/modules/zero_x/src/: client.rs
crates/types/: Cargo.toml
crates/types/src/: config.rs  db.rs  engine.rs  lib.rs  output.rs  profile.rs  risk.rs
crates/utils/: Cargo.toml
crates/utils/src/: fmt.rs  format.rs  lib.rs  output.rs  parse.rs  risk.rs
docs/: 0x-api-v2-reference.md  alchemy-api-ref.md
skills/: README.md
skills/atlas-os/: SKILL.md
skills/atlas-os/references/: json-schemas.md  workflows.md
