[package]
name = "atlas-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "atlas-server"
path = "src/main.rs"

[dependencies]
atlas-common = { path = "../../crates/common" }
atlas-core = { path = "../../crates/core" }
atlas-types = { path = "../../crates/types" }
atlas-mod-hyperliquid = { path = "../../crates/modules/hyperliquid" }
atlas-mod-morpho = { path = "../../crates/modules/morpho" }

# Web framework
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
alloy = { version = "1.0", default-features = false, features = ["signer-local"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
hypersdk = { path = "../../../hypersdk" }
