[package]
name = "atlas-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas-types = { workspace = true }
atlas-utils = { workspace = true }
atlas-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
hypersdk = { workspace = true }
rust_decimal = { workspace = true }
