[package]
name = "atlas-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas-common = { workspace = true }
atlas-types = { workspace = true }
atlas-utils = { workspace = true }
atlas-core = { workspace = true }
atlas-mod-hyperliquid = { workspace = true }
atlas-mod-zero-x = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
hypersdk = { workspace = true }
rust_decimal = { workspace = true }
alloy = { workspace = true }
ta = "0.5.0"
