[package]
name = "atlas-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
keyring = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
alloy = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hypersdk = { workspace = true }
rust_decimal = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
rmp-serde = { workspace = true }
rusqlite = { workspace = true }
