[package]
name = "atlas-0x"
version.workspace = true
edition.workspace = true

[lib]
name = "atlas_zero_x"

[dependencies]
atlas-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
alloy = { workspace = true, features = [
    "providers",
    "network",
    "rpc-types-eth",
    "transport-http",
    "contract",
] }
