[package]
name = "atlas-mod-zero-x"
version.workspace = true
edition.workspace = true

[dependencies]
atlas-common = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
